src/objects/dupcheck__dc3Log__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Object__c</fullName>
        <externalId>true</externalId>
        <label>Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Record__c</fullName>
        <label>Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Type__c</fullName>
        <externalId>true</externalId>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__data__c</fullName>
        <label>Log Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Check Job</label>
        <referenceTo>dupcheck__dcJob__c</referenceTo>
        <relationshipLabel>Duplicate Check Logs</relationshipLabel>
        <relationshipName>Duplicate_Check_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Duplicate Check Log</label>
    <nameField>
        <displayFormat>DCLOG{00000000}</displayFormat>
        <label>Duplicate Check Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>